[package]
name = "luna"
version = "0.1.0"
authors = ["Andy Pandy <andytgamedev@gmail.com>"]
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", default-features = true }
iced_aw = { version = "0.12.0", default-features = false, features = ["tab_bar", "tabs", "sidebar"] }

profiling = "1.0.16"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
