[workspace]
#name = "luna_app" # This is the name of the workspace. It is used to identify the workspace in Cargo commands and in the Cargo.lock file.
resolver = "2"
members = [
    "luna_lib",
    "luna_src",
]

[workspace.package]
edition = "2021"
rust-version = "1.85.0"
repository = "https://github.com/AndreasTar/Luna"
authors = ["Andy Pandy <andytgamedev@gmail.com>"]
license-file = "LICENSE"
#publish = ["luna"] # The name of the package to publish. This is used when publishing the workspace to crates.io.

[profile.release]
opt-level = 2 # fast and small binary

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2