[package]
name = "luna"
version = "0.1.0"
authors = ["Andy Pandy <andytgamedev@gmail.com>"]
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
publish = ["luna"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "luna"          # The name of the target.
path = "lib/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
doc = true             # Is documented by default.
crate-type = ["lib"]   # The crate types to generate.

[features]
default = ["number_converter"]
number_converter = []
