[package]
name = "luna"
description = "A library housing various helpful utilities, originally created for the Luna project: https://github.com/AndreasTar/Luna"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "luna"          # The name of the target.
path = "lib/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
doc = true             # Is documented by default.
crate-type = ["lib"]   # The crate types to generate.

[features]
default = ["number_converter"]
number_converter = []
