[package]
name = "luna"
description = "A library housing various helpful utilities, created for the Luna project: https://github.com/AndreasTar/Luna"
version = "0.2.2"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
publish = true
readme = "README.md"

[dependencies]
image = { version = "0.25.6", optional = true }
bytesize = { version = "2.0.1", optional = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo publish -p luna             # to publish this crate
# cargo publish --dry-run -p luna   # to test publishing this crate
[lib]
name = "luna"          # The name of the target.
path = "lib/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
doc = true             # Is documented by default.
crate-type = ["lib"]   # The crate types to generate.

[features]
all = [
    "number_converter",
    "img_manipulator",
    "color_format_converter"
]
default = ["number_converter", "img_manipulator"]
number_converter = []
img_manipulator = ["dep:image", "dep:bytesize"]
#img_to_ascii = ["img_manipulator"]
color_format_converter = []
