[package]
name = "luna_ui"
version = "0.1.0"
authors = ["Andy Pandy <andytgamedev@gmail.com>"]
edition = { workspace = true }
rust-version = { workspace = true }
repository = "https://github.com/AndreasTar/Luna"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", default-features = true }
iced_aw = { version = "0.12.0", default-features = false, features = ["tab_bar", "tabs", "sidebar", "number_input"] }

luna = { path = "../luna_lib" } # local dependency

profiling = "1.0.16"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
