[package]
name = "luna_ui"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", default-features = true, features = ["image", "tokio", "advanced"]}

luna = { path = "../luna_lib" } # local dependency
#luna = "*" # its published, so we can use it like this
image = { version = "0.25.6" }

rfd = "0.15.3" # file dialogs, open/save files, etc.
profiling = "1.0.16" # i dont really use that for now, will later on

[dependencies.iced_aw]
version = "0.12.0"
default-features = false
features = ["tab_bar", "tabs", "sidebar", "number_input", "menu", "color_picker"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
