[package]
name = "luna_ui"
version = "0.2.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = []

[dependencies]
slint = { version = "1.16" }

luna = { path = "../luna_lib" } # local dependency
#luna = "*" # published dependency
image = { version = "0.25.6" }

rfd = "0.15.3" # file dialogs, open/save files, etc.
profiling = "1.0.16" # i dont really use that for now, will later on

[build-dependencies]
slint-build = "1.16"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
